added some cuteness

--- a/03week/pigLatinGui/index.html
+++ b/03week/pigLatinGui/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PigLatin Translator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 
@@ -13,7 +14,7 @@
       <h1>PigLatin Translator</h1>
       <div class="input"></div>
       <div id="newWord">
-          <h2 id="answer"></h2>
+          <p id="answer"></p>
       </div>
     </div>
     
