progress made with showing list in window

--- a/06week/dodgeball/index.html
+++ b/06week/dodgeball/index.html
@@ -16,14 +16,17 @@
       <h4>Dodge Ball Players</h4>
       <ul id="players"></ul>
   </div>
+  <button onclick="playerList()">List Players</button>
   <div>
       <h4>Blue Team</h4>
       <ul id="blue"></ul>
   </div>
+  <button onclick="broncosList()">Broncos!</button>
   <div>
       <h4>Red Team</h4>
       <ul id="red"></ul>
   </div>
+  <button onclick="raidersList()">Raiders!</button>
   <script src='./main.js'></script>
 </body>
 </html>
