--- a/07week/addressBook/index.html
+++ b/07week/addressBook/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Address Book</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="style.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
     
 </head>
 
 <body>
-  
-    <button id="next"> Next Contact</button>
+<button id="next"> Next Set Of Contacts</button>
+  <div id="container">
     <div id="display"></div>
-
+  </div>
+    
 </body>
 
 <script src="main.js"></script>
