getting soemwhere I think

--- a/06week/dodgeball/index.html
+++ b/06week/dodgeball/index.html
@@ -4,29 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   <title>Dodge Ball</title>
 </head>
 <body>
-  <div>
+<div id="container">
+    <div>
       <h4>List Of People</h4>
       <ul id="people"></ul>
-  </div>
-  <button onclick="listOfPeople()">List People</button>
-  <div>
+    </div>
+    <button onclick="listOfPeople()">List People</button>
+    <div>
       <h4>Dodge Ball Players</h4>
       <ul id="players"></ul>
-  </div>
-  <button onclick="playerList()">List Players</button>
-  <div>
-      <h4>Blue Team</h4>
+    </div>
+    <button onclick="playerList()">List Players</button>
+    <div>
+      <h4>Bronco's! (Blue Team)</h4>
       <ul id="blue"></ul>
-  </div>
-  <button onclick="broncosList()">Broncos!</button>
-  <div>
-      <h4>Red Team</h4>
+    </div>
+    <button onclick="broncosList()">Broncos!</button>
+    <div>
+      <h4>Raider's! (Red Team)</h4>
       <ul id="red"></ul>
-  </div>
-  <button onclick="raidersList()">Raiders!</button>
+    </div>
+    <button onclick="raidersList()">Raiders!</button>
+</div>
   <script src='./main.js'></script>
 </body>
 </html>
