--- a/06week/dodgeball/index.html
+++ b/06week/dodgeball/index.html
@@ -4,31 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   <title>Dodge Ball</title>
 </head>
 <body>
 <div id="container">
     <div>
-      <h4>List Of People</h4>
+      <h4>Who Signed Up!?</h4>
+      <button class='mainBtn' id='firstList' onclick="listOfPeople()">Applicants</button>
       <ul id="people"></ul>
     </div>
-    <button onclick="listOfPeople()">List People</button>
+    <hr>
+
     <div>
-      <h4>Dodge Ball Players</h4>
+      <h4>Registered Players</h4>
+      <button class='mainBtn' id='secondList' onclick="playerList()">Players</button>
       <ul id="players"></ul>
     </div>
-    <button onclick="playerList()">List Players</button>
+    <hr>
+
     <div>
-      <h4>Bronco's! (Blue Team)</h4>
+      <h4>Bronco's!</h4>
+      <button class='mainBtn' id='broncoBtn' onclick="broncosList()">Broncos!</button>
       <ul id="blue"></ul>
     </div>
-    <button onclick="broncosList()">Broncos!</button>
+
     <div>
-      <h4>Raider's! (Red Team)</h4>
+      <h4>Raider's!</h4>
+      <button class='mainBtn' id='raiderBtn' onclick="raidersList()">Raiders!</button>
       <ul id="red"></ul>
     </div>
-    <button onclick="raidersList()">Raiders!</button>
+   
 </div>
   <script src='./main.js'></script>
 </body>
