just needing tests

--- a/06week/dodgeball/index.html
+++ b/06week/dodgeball/index.html
@@ -35,6 +35,8 @@
       <button class='mainBtn' id='raiderBtn' onclick="raidersList()">Raiders!</button>
       <ul id="red"></ul>
     </div>
+    <hr>
+    <button id='reset' onclick='reset()'>Reset Board</button>
    
 </div>
   <script src='./main.js'></script>
