made progress with classes but not really idk

--- a/06week/dodgeball/index.html
+++ b/06week/dodgeball/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   <title>Dodge Ball</title>
 </head>
+
 <body>
 <div id="container">
     <div>
       <h4>Who Signed Up!?</h4>
+      <!--  -->
       <button class='mainBtn' id='firstList' onclick="listOfPeople()">Applicants</button>
       <ul id="people"></ul>
     </div>
@@ -26,13 +28,13 @@
 
     <div>
       <h4>Bronco's!</h4>
-      <button class='mainBtn' id='broncoBtn' onclick="broncosList()">Broncos!</button>
+      <button class='mainBtn' id='broncoBtn' onclick="broncosList()">Meet The Broncos!</button>
       <ul id="blue"></ul>
     </div>
 
     <div>
       <h4>Raider's!</h4>
-      <button class='mainBtn' id='raiderBtn' onclick="raidersList()">Raiders!</button>
+      <button class='mainBtn' id='raiderBtn' onclick="raidersList()">Meet The Raiders!</button>
       <ul id="red"></ul>
     </div>
     <hr>
