--- a/07week/pokemon/index.html
+++ b/07week/pokemon/index.html
@@ -9,21 +9,22 @@
 <body>
     <h2>Pokemon Stadium</h2>
   <div class="container"> 
-    
+    <div class="goBtns">
+      <button id="get1" onclick="getPokemon1()">GO!</button>
+      <button id="get2" onclick="getPokemon2()">GO!</button>
+    </div>
     <div class="cards">
       <div class="card" id="first">
-        <button id="get1" onclick="getPokemon1()">GO!</button>
         <div class="stats" id="pokeName1"> </div>
       </div>
       <div class="card" id="second">
-        <button id="get2" onclick="getPokemon2()">GO!</button>
         <div class="stats" id="pokeName2"> </div>
       </div>
+      <h3 id="announcement"></h3>
     </div>
     <hr>
     <div class="active">
-        <!-- onclick="checkForWin()" -->
-      <button class="battle" > Battle</button>
+      <button class="battle" onclick="checkForWin()"> Battle</button>
       <button class="restart" onclick="restart()"> Restart</button>
     </div>
    
